fixed the main page html. Used flexbox to center the image. Also had to use a smaller img than originally tested for it to fit. It was not moving around when using the CSS selectors.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Home page";
 }
 
+<link rel="stylesheet" type="text/css" href="/css/site.css" />
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-
+    <div class="logoImg">
+        <img src="img/shabelgroupMID.jpg" alt="shabelGroupMainLogo" asp-append-version="true" />
+    </div>
 </div>
+
