--- a/Pages/CustomerList/Edit.cshtml
+++ b/Pages/CustomerList/Edit.cshtml
@@ -28,7 +28,7 @@
                 <input asp-for="Customer.TimeSpan" class="form-control"/>
             </div>
             @*Not showing up. Come back to it. *@
-            <span asp-validation-for="Customer.TimeSpan" class="text-danger"></span>
+            <span asp-validation-for="Customer.TimeSpan" class="text-danger">testing</span>
         </div>
         <div class="form-group row">
             <div class="col-3">
