--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,23 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*Custom snippets*/
+
+
+.center {
+    display: block;
+    margin-left: 30px;
+    margin-right: 20px;
+    width: 50%;
+
+}
+
+.logoImg {
+
+    display: flex;
+    justify-content: flex-start;
+}
+
+
+
