--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,8 +7,6 @@
 <link rel="stylesheet" type="text/css" href="/css/site.css" />
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <div class="logoImg">
-        <img src="img/shabelgroupMID.jpg" alt="shabelGroupMainLogo" asp-append-version="true" />
-    </div>
+        <img src="img/shabelgroupMID.jpg" alt="shabelGroupMainLogo" width="800" height="auto" asp-append-version="true" />
 </div>
 
