--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -81,10 +81,13 @@ body {
 
 }
 
-.logoImg {
+@media {
+    img {
+        max-width: 100%;
+        min-width: 300px;
+        height: auto;
 
-    display: flex;
-    justify-content: flex-start;
+    }
 }
 
 
