--- a/Pages/CustomerList/UpdateInsert.cshtml
+++ b/Pages/CustomerList/UpdateInsert.cshtml
@@ -29,7 +29,6 @@
             <div class="col-4">
                 <input asp-for="Customer.TimeSpan" class="form-control"/>
             </div>
-            @*Not showing up. Come back to it. *@
             <span asp-validation-for="Customer.TimeSpan" class="text-danger"></span>
         </div>
         <div class="form-group row">
@@ -46,10 +45,10 @@
                 @*If not null, then disp update, else create*@
                 <button type="submit" class="btn btn-primary form-control">@(Model.Customer.Id != 0 ? "Update" : "Create")</button>
             </div>
-            @*this is not expanding out as it should*@
-            <div class="col-3">
-                <a asp-page="Index" class="btn btn-success form-group">Back to List</a>
+            <div class="col-2">
+                <a asp-page="Index" class="btn btn-success form-control">Back to List</a>
             </div>
+
 
         </div>
     </form>
