Added the DT Formatter to the DT property so it would not show the milliseconds. Also so it would look a little different with the new format. I tried to add the asp-format option to the html page but it would not format it to the page for some reason.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,6 @@
 <link rel="stylesheet" type="text/css" href="/css/site.css" />
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-        <img src="img/shabelgroupMID.jpg" alt="shabelGroupMainLogo" width="800" height="auto" asp-append-version="true" />
+        <img src="img/shabelgroupMID.jpg" alt="shabelGroupMainLogo" width="800"  asp-append-version="true" />
 </div>
 
