--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -40,8 +40,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - CapstoneProjectCustomerListWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        <div class="container">2021 Shabel Group Inc - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
